--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SEMContextConnection": "Server=LAPTOP-JIL4P4RC\\SQLEXPRESS;Database=SEM;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "MCCContextConnection": "Server=LAPTOP-JIL4P4RC\\SQLEXPRESS;Database=MCC;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
